--- a/css/styles.css
+++ b/css/styles.css
@@ -609,7 +609,6 @@ transform: translateY(0);
     width: 8px;
     height: 8px;
     margin: 0% auto;
-
 }
 
 .backdrop.is-hidden .modal {
@@ -626,8 +625,193 @@ transform: translateY(0);
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.modal-close:hover {
+    background: #404BBF;
+    fill: #FFFFFF;
+}
+
 .is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+}
+
+.modal-title {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+        margin-top: 24px;
+        margin-bottom: 16px;
+}
+
+.form-input {
+        width: 100%;
+        height: 40px;
+        color: #000;
+        border: 1px solid rgba(46, 47, 66, 0.2);
+        border-radius: 4px;
+        padding: 11px 38px;
+        outline: transparent;
+}
+
+.form-input:focus {
+    border-color: #4D5AE5;
+}
+
+.form-input:focus + .form-icon {
+    fill: #4D5AE5;
+}
+
+.form-btn {
+    display: block;
+    background: #4D5AE5;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-color: #4D5AE5;
+    margin: 0 auto;
+    padding: 16px 32px;
+    gap: 10px;
+    width: 169px;
+    height: 56px;
+}
+
+.form-group {
+    margin-bottom: 8px;
+}
+
+.form-label span{
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+    margin-bottom: 4px;
+}
+
+.form-control {
+position: relative;
+}
+
+.form-icon {
+    position: absolute;
+    left: 19px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.form-texterea {
+        display: block;
+        width: 100%;
+        min-height: 120px;
+        border: 1px solid rgba(46, 47, 66, 0.2);
+        border-radius: 4px;
+        padding: 8px 16px;
+        outline: transparent;  
+        resize: vertical; 
+}
+
+.form-texterea:focus {
+    border-color: #4D5AE5;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-texterea::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(14 \ 12);
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4)
+}
+
+.form-label-checkbox {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.04em;
+        color: #8E8F99;
+        display: flex;
+        align-items: center;
+    }
+
+   .form-checkbox:checked + .form-label-checkbox::before{
+    background-color: #404BBF;
+    border-color: #404BBF;
+    background: url(../images/vector3.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.form-label-checkbox span {
+        width: 16px;
+        height: 16px;
+        border: 1px solid #2E2F42;
+        border-radius: 2px;
+        margin-right: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        fill: transparent;
+        transition: background-color 0,25s cubic-bezier(0.4, 0, 0.2, 1) fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-checkbox:checked + .form-label-checkbox span {
+    fill: #F4F4FD;
+    background-color: #404BBF;
+    border: 1px solid #F4F4FD;
+}
+
+.form-checkbox {
+    appearance: none;
+}
+
+.contact-title {
+       font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #FFFFFF;
+        margin-bottom: 16px;
+}
+
+.contact-form {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.contact-form-input {
+        width: 264px;
+        height: 40px;
+        background-color: transparent;
+        border: 1px solid #FFFFFF;
+        border-radius: 4px;
+        padding: 8px 16px;
+        margin-right: 24px;
+}
+
+.contact-form-input::placeholder {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: calc(24 \ 12);
+        display: flex;
+        align-items: center;
+        letter-spacing: 0.04em;
+        color: #FFFFFF;
+}
+
+.contact-form-btn {
+    background: #4D5AE5;
+    border-color: #4D5AE5;
+    border-radius: 4px;
+    max-width: 165px;
+    max-height: 40px;
+    padding: 8px 24px;
+    gap: 16px
+}
+
+.svg-subscrib {
+
 }
