--- a/css/styles.css
+++ b/css/styles.css
@@ -676,10 +676,7 @@ transform: translateY(0);
     gap: 10px;
     width: 169px;
     height: 56px;
-}
-
-.form-group {
-    margin-bottom: 8px;
+    margin-top: 24px;
 }
 
 .form-label span{
@@ -690,6 +687,7 @@ transform: translateY(0);
     letter-spacing: 0.04em;
     color: #8E8F99;
     margin-bottom: 4px;
+    margin-top: 8px;
 }
 
 .form-control {
@@ -789,15 +787,12 @@ position: relative;
         border: 1px solid #FFFFFF;
         border-radius: 4px;
         padding: 8px 16px;
-        margin-right: 24px;
 }
 
 .contact-form-input::placeholder {
         font-weight: 400;
         font-size: 12px;
         line-height: calc(24 \ 12);
-        display: flex;
-        align-items: center;
         letter-spacing: 0.04em;
         color: #FFFFFF;
 }
@@ -809,9 +804,19 @@ position: relative;
     max-width: 165px;
     max-height: 40px;
     padding: 8px 24px;
-    gap: 16px
+    gap: 16px;
 }
 
-.svg-subscrib {
-
+.privacy-policy {
+    color: #4D5AE5;
+    padding-left: 3px;
 }
+
+.form-div {
+    display: flex;
+    justify-content: end;
+}
+
+
+ 
+
