--- a/css/styles.css
+++ b/css/styles.css
@@ -773,20 +773,24 @@ position: relative;
         letter-spacing: 0.02em;
         color: #FFFFFF;
         margin-bottom: 16px;
+        margin-left: 80px;
 }
 
 .contact-form {
     display: flex;
     flex-wrap: wrap;
+    position: relative;
 }
 
 .contact-form-input {
-        width: 264px;
+        min-width: 264px;
         height: 40px;
         background-color: transparent;
         border: 1px solid #FFFFFF;
+        color: #FFFFFF;
         border-radius: 4px;
-        padding: 8px 16px;
+        margin-left: 100px;
+        padding-left: 8px;
 }
 
 .contact-form-input::placeholder {
@@ -805,6 +809,12 @@ position: relative;
     max-height: 40px;
     padding: 8px 24px;
     gap: 16px;
+    margin-left: 24px;
+}
+
+.contact-form-btn:hover {
+  background-color: #404BBF;
+  border-color: #404BBF;
 }
 
 .privacy-policy {
@@ -814,7 +824,15 @@ position: relative;
 
 .form-div {
     display: flex;
-    justify-content: end;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin-left: 0%;
+    position: absolute;
+    top: 0;
+    left: 100px;
+
 }
 
 
