--- a/css/styles.css
+++ b/css/styles.css
@@ -312,14 +312,12 @@ background-color: #404BBF;
     min-width: 170px;
     display: block;
     margin: 0 auto;
-    transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1),border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-btn:hover {
     background: #404BBF;
     border-color: #404BBF;
-    border-radius: 4px;
-    color: #FFFFFF;
 }
 
  
@@ -590,8 +588,8 @@ transform: translateY(0);
 
 .modal {
     width: 408px;
-    min-height: 576px;
-    padding: 24px;
+    height: 584px;
+    padding:  72px 24px 24px;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -623,6 +621,11 @@ transform: translateY(0);
     margin-left: auto;
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    position: absolute;
+    top: 24px;
+    right: 24px;
 }
 
 .modal-close:hover {
@@ -643,7 +646,6 @@ transform: translateY(0);
         text-align: center;
         letter-spacing: 0.02em;
         color: #2E2F42;
-        margin-top: 24px;
         margin-bottom: 16px;
 }
 
@@ -655,6 +657,7 @@ transform: translateY(0);
         border-radius: 4px;
         padding: 11px 38px;
         outline: transparent;
+        transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1), border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus {
@@ -679,6 +682,16 @@ transform: translateY(0);
     margin-top: 24px;
 }
 
+.form-btn:hover {
+  background-color: #404BBF;
+  transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-label {
+    position: relative;
+    /* display: block; */
+}
+
 .form-label span{
     display: block;
     font-weight: 400;
@@ -690,15 +703,12 @@ transform: translateY(0);
     margin-top: 8px;
 }
 
-.form-control {
-position: relative;
-}
-
 .form-icon {
     position: absolute;
-    left: 19px;
     top: 50%;
+    left: 8px;
     transform: translateY(-50%);
+    transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-texterea {
@@ -753,13 +763,12 @@ position: relative;
         justify-content: center;
         align-items: center;
         fill: transparent;
-        transition: background-color 0,25s cubic-bezier(0.4, 0, 0.2, 1) fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 0,25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-checkbox:checked + .form-label-checkbox span {
     fill: #F4F4FD;
     background-color: #404BBF;
-    border: 1px solid #F4F4FD;
 }
 
 .form-checkbox {
@@ -773,13 +782,16 @@ position: relative;
         letter-spacing: 0.02em;
         color: #FFFFFF;
         margin-bottom: 16px;
-        margin-left: 80px;
 }
 
 .contact-form {
     display: flex;
-    flex-wrap: wrap;
     position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-left: 0%;
+    top: 0;
 }
 
 .contact-form-input {
@@ -789,8 +801,8 @@ position: relative;
         border: 1px solid #FFFFFF;
         color: #FFFFFF;
         border-radius: 4px;
-        margin-left: 100px;
         padding-left: 8px;
+        outline: none;
 }
 
 .contact-form-input::placeholder {
@@ -810,6 +822,7 @@ position: relative;
     padding: 8px 24px;
     gap: 16px;
     margin-left: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-btn:hover {
@@ -822,17 +835,8 @@ position: relative;
     padding-left: 3px;
 }
 
-.form-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    margin-left: 0%;
-    position: absolute;
-    top: 0;
-    left: 100px;
-
+.contact-iteam-class {
+    margin-left: 80px;
 }
 
 
