--- a/css/styles.css
+++ b/css/styles.css
@@ -602,11 +602,6 @@ transform: translateY(0);
 
 .icon-modal-btn {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 8px;
-    height: 8px;
-    margin: 0% auto;
 }
 
 .backdrop.is-hidden .modal {
@@ -614,6 +609,9 @@ transform: translateY(0);
 }
 
 .modal-close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 24px;
     height: 24px;
     border-radius: 50%;
@@ -622,7 +620,7 @@ transform: translateY(0);
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     top: 24px;
     right: 24px;
@@ -657,7 +655,7 @@ transform: translateY(0);
         border-radius: 4px;
         padding: 11px 38px;
         outline: transparent;
-        transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1), border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+        transition: border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus {
@@ -680,7 +678,6 @@ transform: translateY(0);
     width: 169px;
     height: 56px;
     margin-top: 24px;
-    margin-bottom: 24px;
 }
 
 .form-btn:hover {
@@ -766,7 +763,7 @@ transform: translateY(0);
         justify-content: center;
         align-items: center;
         fill: transparent;
-        transition: background-color 0,25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 0,25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-checkbox:checked + .form-label-checkbox span {
@@ -789,12 +786,6 @@ transform: translateY(0);
 
 .contact-form {
     display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-left: 0%;
-    top: 0;
 }
 
 .contact-form-input {
@@ -825,7 +816,7 @@ transform: translateY(0);
     padding: 8px 24px;
     gap: 16px;
     margin-left: 24px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
 .contact-form-btn:hover {
