--- a/css/styles.css
+++ b/css/styles.css
@@ -600,10 +600,6 @@ transform: translateY(0);
     transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-modal-btn {
-    display: flex;
-}
-
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0);
 }
@@ -615,8 +611,6 @@ transform: translateY(0);
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    display: block;
-    margin-left: auto;
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
@@ -743,6 +737,7 @@ transform: translateY(0);
         align-items: center;
         position: absolute;
         top: 80%;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
    .form-checkbox:checked + .form-label-checkbox::before{
